move dependencies to version 12.36.65

--- a/charts/cluster-acm/Chart.yaml
+++ b/charts/cluster-acm/Chart.yaml
@@ -60,5 +60,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Align all startx dependencies packages to version 12.36.49 stable for OCP 4.12.36"
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: "move dependencies to version 12.36.65"
+  artifacthub.io/containsSecurityUpdates: "false"
