--- a/charts/cluster-machine/Chart.yaml
+++ b/charts/cluster-machine/Chart.yaml
@@ -43,5 +43,5 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Support for variable volumeType for each machineSet"
+      description: "move dependencies to version 12.36.65"
   artifacthub.io/containsSecurityUpdates: "false"
