--- a/charts/cluster-router/Chart.yaml
+++ b/charts/cluster-router/Chart.yaml
@@ -45,6 +45,6 @@ dependencies: []
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "release 12.36.66 aligned with OCP 4.12.36"
+      description: "move dependencies to version 12.36.65"
   artifacthub.io/containsSecurityUpdates: "false"
 
