--- a/charts/sxapi/Chart.yaml
+++ b/charts/sxapi/Chart.yaml
@@ -41,7 +41,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "release 12.36.66 aligned with OCP 4.12.36"
+      description: "move dependencies to version 12.36.65"
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: sxapi
