--- a/charts/cluster-console/values-mg-pdd-p2.yaml
+++ b/charts/cluster-console/values-mg-pdd-p2.yaml
@@ -18,7 +18,7 @@ console:
   links:
     - name: nsdashboard-gouvmc
       spec: |
-        href: 'https://https://www.gouv.mc'
+        href: 'https://www.gouv.mc'
         location: NamespaceDashboard
         text: Gouv Monegasque
     - name: nsdashboard-dprn
@@ -33,7 +33,7 @@ console:
         text: Gouv Monegasque - OpenData
     - name: applicationmenu-gouvmc
       spec: |
-        href: 'https://https://www.gouv.mc'
+        href: 'https://www.gouv.mc'
         location: ApplicationMenu
         text: Gouvernement
         applicationMenu:
@@ -57,7 +57,7 @@ console:
           imageURL: "https://upload.wikimedia.org/wikipedia/commons/1/12/Blason_pays_Monaco.svg"
     - name: helpmenu-gouvmc
       spec: |
-        href: 'https://https://www.gouv.mc'
+        href: 'https://www.gouv.mc'
         location: HelpMenu
         text: Gouv Monegasque
     - name: helpmenu-dprn
