prepare release 12.45.0 form 12.36.64

--- a/charts/cluster-istio/Chart.yaml
+++ b/charts/cluster-istio/Chart.yaml
@@ -77,5 +77,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "move dependencies to version 12.36.65"
+      description: "Stable version aligned to Openshift version 4.12.45"
   artifacthub.io/containsSecurityUpdates: "false"
