--- a/charts/example-deployment/Chart.yaml
+++ b/charts/example-deployment/Chart.yaml
@@ -44,5 +44,5 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "move dependencies to version 12.36.65"
+      description: "Stable version aligned to Openshift version 4.12.45"
   artifacthub.io/containsSecurityUpdates: "false"
