--- a/charts/sxapi/Chart.yaml
+++ b/charts/sxapi/Chart.yaml
@@ -41,7 +41,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "move dependencies to version 12.36.65"
+      description: "Stable version aligned to Openshift version 4.12.45"
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: sxapi
