--- a/charts/chaos-monkey/Chart.yaml
+++ b/charts/chaos-monkey/Chart.yaml
@@ -58,5 +58,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Stable version aligned to Openshift version 4.12.45"
-  artifacthub.io/containsSecurityUpdates: "false"
+      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+  artifacthub.io/containsSecurityUpdates: "true"
