--- a/charts/operator/Chart.yaml
+++ b/charts/operator/Chart.yaml
@@ -43,5 +43,5 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Stable version aligned to Openshift version 4.12.45"
-  artifacthub.io/containsSecurityUpdates: "false"
+      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+  artifacthub.io/containsSecurityUpdates: "true"
