--- a/charts/sxapi/Chart.yaml
+++ b/charts/sxapi/Chart.yaml
@@ -41,8 +41,8 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Stable version aligned to Openshift version 4.12.45"
-  artifacthub.io/containsSecurityUpdates: "false"
+      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+  artifacthub.io/containsSecurityUpdates: "true"
   artifacthub.io/images: |
     - name: sxapi
       image: quay.io/startx/sxapi:0.3.63
