--- a/charts/cluster-crunchy/Chart.yaml
+++ b/charts/cluster-crunchy/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 12.45.0
 # Version name of the crunchy operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 5.4.1
+appVersion: 5.5.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-crunchy.svg
 # category associated to this package
@@ -58,4 +58,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+    - kind: changed
+      description: "Update crunchy operator to versin 5.5.0"
   artifacthub.io/containsSecurityUpdates: "true"
