--- a/charts/cluster-istio/Chart.yaml
+++ b/charts/cluster-istio/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 12.45.0
 # Version name of the istio operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 2.4.2
+appVersion: 2.4.5
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-istio.svg
 # category associated to this package
@@ -78,4 +78,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+    - kind: changed
+      description: "Upgrade to 1.51.0-1 Jaeger, 1.65.11 Kiali and 2.4.5 Istio operator release"
   artifacthub.io/containsSecurityUpdates: "true"
