--- a/charts/cluster-oadp/Chart.yaml
+++ b/charts/cluster-oadp/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 12.45.0
 # Version name of the oadp operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 1.1.5
+appVersion: 1.3.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-oadp.svg
 # category associated to this package
@@ -61,4 +61,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+    - kind: changed
+      description: "Upgrade to 1.3.0 OADP operator release"
   artifacthub.io/containsSecurityUpdates: "true"
