--- a/charts/cluster-odf/Chart.yaml
+++ b/charts/cluster-odf/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 12.45.0
 # Version name of the ODF operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 4.13.0
+appVersion: 4.13.4
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-odf.svg
 # category associated to this package
@@ -61,4 +61,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+    - kind: changed
+      description: "Upgrade to 4.13.4 ODF operator release"
   artifacthub.io/containsSecurityUpdates: "true"
