--- a/charts/cluster-quay/Chart.yaml
+++ b/charts/cluster-quay/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 12.45.0
 # Version name of the quay operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 3.9.0
+appVersion: 3.10.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-quay.svg
 # category associated to this package
@@ -63,4 +63,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+    - kind: changed
+      description: "Upgrade to 3.10.0 Quay and QuaySec operator release"
   artifacthub.io/containsSecurityUpdates: "true"
