--- a/charts/cluster-sso/Chart.yaml
+++ b/charts/cluster-sso/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 12.45.0
 # Version name of the redhat-sso operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 7.6.1
+appVersion: 7.6.6
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-sso.svg
 # category associated to this package
@@ -57,4 +57,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+    - kind: changed
+      description: "Upgrade to 7.6.6 RedHat SSO operator release"
   artifacthub.io/containsSecurityUpdates: "true"
