--- a/charts/cluster-crunchy/Chart.yaml
+++ b/charts/cluster-crunchy/Chart.yaml
@@ -57,7 +57,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
     - kind: changed
       description: "Update crunchy operator to versin 5.5.0"
   artifacthub.io/containsSecurityUpdates: "true"
