--- a/charts/cluster-oadp/Chart.yaml
+++ b/charts/cluster-oadp/Chart.yaml
@@ -60,7 +60,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
     - kind: changed
       description: "Upgrade to 1.3.0 OADP operator release"
   artifacthub.io/containsSecurityUpdates: "true"
