--- a/charts/cluster-vpa/Chart.yaml
+++ b/charts/cluster-vpa/Chart.yaml
@@ -54,7 +54,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
     - kind: changed
       description: "Upgrade to 4.13.0-202311211131 VPA operator release"
   artifacthub.io/containsSecurityUpdates: "true"
