--- a/charts/example-php/Chart.yaml
+++ b/charts/example-php/Chart.yaml
@@ -44,6 +44,6 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 13.26.0 to prepare the 4.13 branch (short lived)"
+      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
   artifacthub.io/containsSecurityUpdates: "true"
 
