--- a/charts/cluster-logging/Chart.yaml
+++ b/charts/cluster-logging/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of the logging operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 5.7.4
+appVersion: 5.8.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-logging.svg
 # category associated to this package
@@ -63,4 +63,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+    - kind: changed
+      description: "Upgrade to 5.8.0 of the Logging and Elastic operators release"
   artifacthub.io/containsSecurityUpdates: "true"
