--- a/charts/cluster-mtv/Chart.yaml
+++ b/charts/cluster-mtv/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of the mtv operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 4.13.26
+appVersion: 2.5.3
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-mtv.svg
 # category associated to this package
@@ -56,4 +56,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+    - kind: changed
+      description: "Upgrade to 2.5.3 MTV operator release"
   artifacthub.io/containsSecurityUpdates: "true"
