--- a/charts/cluster-console/templates/logoConfigMap.yaml
+++ b/charts/cluster-console/templates/logoConfigMap.yaml
@@ -10,9 +10,7 @@ metadata:
   name: "{{- .name | default "default-logo" -}}"
   namespace: "{{- $namespace -}}"
   labels:
-    {{- include "startx.labelsCommonStartx" $root | nindent 4 }}
-    {{- include "startx.labelsCommonK8S" $root | nindent 4 }}
-    app.kubernetes.io/instance: {{ include "startx.appNameVersion" $root | quote }}
+    {{- include "cluster-console.labels" $root | nindent 4 }}
     app.kubernetes.io/name: "{{- .name | default "default-logo" -}}-configmap"
   annotations:
     {{- include "cluster-console.annotations" $root | nindent 4 }}
