--- a/charts/cluster-router/Chart.yaml
+++ b/charts/cluster-router/Chart.yaml
@@ -16,7 +16,7 @@ category: cluster
 # tags
 tags: infra,cluster,config
 # Kube minimum version
-kubeVersion: ">=1.26.1111-0"
+kubeVersion: ">=1.26.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -45,6 +45,6 @@ dependencies: []
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
   artifacthub.io/containsSecurityUpdates: "true"
 
