--- a/charts/cluster-crunchy/Chart.yaml
+++ b/charts/cluster-crunchy/Chart.yaml
@@ -57,7 +57,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
     - kind: changed
       description: "Update crunchy operator to versin 5.5.0"
   artifacthub.io/containsSecurityUpdates: "true"
