--- a/charts/cluster-knative/Chart.yaml
+++ b/charts/cluster-knative/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of the knative operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 1.29.1
+appVersion: 1.30.2
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-knative.svg
 # category associated to this package
@@ -66,5 +66,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
+    - kind: changed
+      description: "Upgrade to 1.30.2 of the KNative operators release"
   artifacthub.io/containsSecurityUpdates: "true"
