--- a/charts/cluster-localstorage/Chart.yaml
+++ b/charts/cluster-localstorage/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of the localstorage operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 4.13.26
+appVersion: 4.13.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-localstorage.svg
 # category associated to this package
@@ -56,5 +56,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
+    - kind: changed
+      description: "Upgrade to 4.13.0-202311211131 of the LocalStorage Helm release"
   artifacthub.io/containsSecurityUpdates: "true"
