--- a/charts/cluster-logging/Chart.yaml
+++ b/charts/cluster-logging/Chart.yaml
@@ -62,7 +62,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
     - kind: changed
       description: "Upgrade to 5.8.0 of the Logging and Elastic operators release"
   artifacthub.io/containsSecurityUpdates: "true"
