--- a/charts/cluster-oadp/Chart.yaml
+++ b/charts/cluster-oadp/Chart.yaml
@@ -60,7 +60,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
     - kind: changed
       description: "Upgrade to 1.3.0 OADP operator release"
   artifacthub.io/containsSecurityUpdates: "true"
