--- a/charts/cluster-vpa/Chart.yaml
+++ b/charts/cluster-vpa/Chart.yaml
@@ -54,7 +54,7 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
     - kind: changed
       description: "Upgrade to 4.13.0-202311211131 VPA operator release"
   artifacthub.io/containsSecurityUpdates: "true"
