--- a/charts/example-couchbase/Chart.yaml
+++ b/charts/example-couchbase/Chart.yaml
@@ -51,5 +51,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Unstable version aligned to Openshift version 4.13.26 to prepare the 13.26.x stable release (short lived)"
+      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
   artifacthub.io/containsSecurityUpdates: "true"
