--- a/charts/cluster-certmanager/Chart.yaml
+++ b/charts/cluster-certmanager/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of the certmanager operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 1.11.4
+appVersion: 1.12.1
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-certmanager.svg
 # category associated to this package
@@ -59,5 +59,5 @@ annotations:
     - kind: changed
       description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
     - kind: changed
-      description: "Upgrade to 4.13.0-202311211131 of the CertManager Helm release"
+      description: "Upgrade to 1.12.1 of the CertManager operator release"
   artifacthub.io/containsSecurityUpdates: "true"
