--- a/charts/cluster-ansible/Chart.yaml
+++ b/charts/cluster-ansible/Chart.yaml
@@ -2,13 +2,13 @@ apiVersion: v2
 # Name of this Helm chart
 name: cluster-ansible
 # Description of this Helm chart
-description: Helm chart used to configure Ansible Automation private registry at the cluster level
+description: Helm chart used to configure Ansible Automation Platform (AAP) at the cluster level
 # Helm chart application
 type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of the ansible operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 2.2.1
+appVersion: 2.4.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-ansible.svg
 # category associated to this package
@@ -57,4 +57,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
+    - kind: changed
+      description: "Upgrade to 2.4.0 of the AAP operator release"
   artifacthub.io/containsSecurityUpdates: "true"
