--- a/charts/cluster-3scale/Chart.yaml
+++ b/charts/cluster-3scale/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version of 3scale operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 0.8.4
+appVersion: 0.10.7
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-3scale.svg
 # category associated to this package
@@ -45,11 +45,6 @@ dependencies:
     version: "12.36.65"
     alias: project
     condition: project.enabled
-  - name: project
-    repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
-    alias: projectOperator
-    condition: projectOperator.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
     version: "12.36.65"
@@ -60,4 +55,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
+    - kind: changed
+      description: "Upgrade to 0.10.7 of the 3Scale operator release"
   artifacthub.io/containsSecurityUpdates: "true"
