--- a/charts/cluster-acm/Chart.yaml
+++ b/charts/cluster-acm/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of this application (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 2.6.1
+appVersion: 2.9.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-acm.svg
 # category associated to this package
@@ -16,7 +16,7 @@ category: cluster
 # tags
 tags: infra,cluster,management,multi-cluster
 # Kube minimum version
-kubeVersion: ">=1.19.0-0"
+kubeVersion: ">=1.26.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -61,4 +61,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
+    - kind: changed
+      description: "Upgrade to 2.9.0 of the ACM operator release"
   artifacthub.io/containsSecurityUpdates: "true"
