--- a/charts/cluster-acs/Chart.yaml
+++ b/charts/cluster-acs/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 13.26.0
 # Version name of this application (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 3.74.5
+appVersion: 4.3.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-acs.svg
 # category associated to this package
@@ -56,4 +56,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
+    - kind: changed
+      description: "Upgrade to 4.3.0 of the ACS operator release"
   artifacthub.io/containsSecurityUpdates: "true"
