--- a/charts/sxapi/Chart.yaml
+++ b/charts/sxapi/Chart.yaml
@@ -41,8 +41,8 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: "upgrade all dependencies charts to version 13.26.0"
+  artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: sxapi
       image: quay.io/startx/sxapi:0.3.63
