--- a/charts/chaos/Chart.yaml
+++ b/charts/chaos/Chart.yaml
@@ -48,32 +48,32 @@ maintainers:
 dependencies:
   - name: "chaos-cerberus"
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: cerberus
     condition: cerberus.enabled
   - name: "chaos-kraken"
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: kraken
     condition: kraken.enabled
   - name: "chaos-litmus"
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: litmus
     condition: litmus.enabled
   - name: "chaos-mesh"
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: mesh
     condition: mesh.enabled
   - name: "chaos-monkey"
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: monkey
     condition: monkey.enabled
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: "upgrade all dependencies charts to version 13.26.0"
+  artifacthub.io/containsSecurityUpdates: "false"
