--- a/charts/cluster-gitlab/Chart.yaml
+++ b/charts/cluster-gitlab/Chart.yaml
@@ -45,7 +45,7 @@ maintainers:
 dependencies:
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: project
     condition: project.enabled
   - name: gitlab
@@ -57,7 +57,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Minimum requirements for kubernetes is 1.18.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
-    - kind: changed
-      description: "Upgrade to 16.6.1 of the Gitlab Helm release"
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: "upgrade all dependencies charts to version 13.26.0"
+  artifacthub.io/containsSecurityUpdates: "false"
