--- a/charts/example-fruitapp-project/Chart.yaml
+++ b/charts/example-fruitapp-project/Chart.yaml
@@ -44,32 +44,32 @@ maintainers:
 dependencies: 
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: project_devel
     condition: project_devel.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: project_integration
     condition: project_integration.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: project_preprod
     condition: project_preprod.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: project_prod
     condition: project_prod.activated
   - name: example-imagestreams
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65"
+    version: "13.26.0"
     alias: imagestreams
     condition: imagestreams.activated
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Minimum requirements for kubernetes is 1.26.0 version, use previous releases (12.x, 11.x, ...) for older k8s clusters"
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: "upgrade all dependencies charts to version 13.26.0"
+  artifacthub.io/containsSecurityUpdates: "false"
