upgrade lost configs

--- a/charts/operator/values-tekton-1.8.2.yaml
+++ b/charts/operator/values-tekton-1.8.2.yaml
@@ -12,9 +12,9 @@ subscription:
   hooked: false
   name: "openshift-pipelines-operator-rh"
   namespace: "openshift-operators"
-  version: "v1.13.0"
+  version: "v1.8.2"
   operator: 
-    channel: latest
+    channel: ocp-4.12
     name: openshift-pipelines-operator-rh
     installPlanApproval: Automatic
     # csv: openshift-pipelines-operator
