Prepare upgrading to 14.6.5-noschema dependencies

--- a/charts/cluster-3scale/Chart.yaml
+++ b/charts/cluster-3scale/Chart.yaml
@@ -54,5 +54,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "keep all dependencies charts to version 12.36.65-noschema and prepare upgrading to 14.6.5-noschema dependencies"
   artifacthub.io/containsSecurityUpdates: "false"
