--- a/charts/example-fruitapp-project/Chart.yaml
+++ b/charts/example-fruitapp-project/Chart.yaml
@@ -44,32 +44,32 @@ maintainers:
 dependencies: 
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project_devel
     condition: project_devel.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project_integration
     condition: project_integration.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project_preprod
     condition: project_preprod.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project_prod
     condition: project_prod.activated
   - name: example-imagestreams
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: imagestreams
     condition: imagestreams.activated
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "keep all dependencies charts to version 12.36.65-noschema and prepare upgrading to 14.6.7-noschema dependencies"
+      description: "upgrade all dependencies charts to version 14.6.5-noschema"
   artifacthub.io/containsSecurityUpdates: "false"
