--- a/charts/cluster-config/Chart.yaml
+++ b/charts/cluster-config/Chart.yaml
@@ -42,42 +42,42 @@ maintainers:
 dependencies:
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project
     condition: project.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorElastic
     condition: operatorElastic.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorGlobal
     condition: operatorGlobal.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: projectSosReport
     condition: projectSosReport.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorSosReport
     condition: operatorSosReport.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: projectMustGather
     condition: projectMustGather.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorMustGather
     condition: operatorMustGather.enabled
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "keep all dependencies charts to version 12.36.65-noschema and prepare upgrading to 14.6.7-noschema dependencies"
+      description: "upgrade all dependencies charts to version 14.6.5-noschema"
   artifacthub.io/containsSecurityUpdates: "false"
