--- a/charts/cluster-istio/Chart.yaml
+++ b/charts/cluster-istio/Chart.yaml
@@ -45,37 +45,37 @@ maintainers:
 dependencies:
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project
     condition: project.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: projectOperator
     condition: projectOperator.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorElastic
     condition: operatorElastic.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorKiali
     condition: operatorKiali.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorJaeger
     condition: operatorJaeger.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operatorIstio
     condition: operatorIstio.enabled
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "keep all dependencies charts to version 12.36.65-noschema and prepare upgrading to 14.6.7-noschema dependencies"
+      description: "upgrade all dependencies charts to version 14.6.5-noschema"
   artifacthub.io/containsSecurityUpdates: "false"
