--- a/charts/cluster-metering/Chart.yaml
+++ b/charts/cluster-metering/Chart.yaml
@@ -45,17 +45,17 @@ maintainers:
 dependencies:
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: project
     condition: project.enabled
   - name: operator
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: operator
     condition: operator.enabled
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "keep all dependencies charts to version 12.36.65-noschema and prepare upgrading to 14.6.7-noschema dependencies"
+      description: "upgrade all dependencies charts to version 14.6.5-noschema"
   artifacthub.io/containsSecurityUpdates: "false"
