--- a/charts/example-couchbase/Chart.yaml
+++ b/charts/example-couchbase/Chart.yaml
@@ -45,11 +45,11 @@ maintainers:
 dependencies:
   - name: sxapi
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "12.36.65-noschema"
+    version: "14.6.5-noschema"
     alias: couchbase
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "keep all dependencies charts to version 12.36.65-noschema and prepare upgrading to 14.6.7-noschema dependencies"
+      description: "upgrade all dependencies charts to version 14.6.5-noschema"
   artifacthub.io/containsSecurityUpdates: "false"
