upgrade minimum kubeVersion to 1.27.x minimum

--- a/charts/chaos/Chart.yaml
+++ b/charts/chaos/Chart.yaml
@@ -19,7 +19,7 @@ category: chaos
 # tags
 tags: infra,cerberus,chaos,testing,cluster,application
 # Kube minimum version
-kubeVersion: ">=1.26.0-0"
+kubeVersion: ">=1.27.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -75,5 +75,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
