--- a/charts/cluster-gitlab/Chart.yaml
+++ b/charts/cluster-gitlab/Chart.yaml
@@ -57,5 +57,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
