--- a/charts/cluster-jenkins/Chart.yaml
+++ b/charts/cluster-jenkins/Chart.yaml
@@ -16,7 +16,7 @@ category: cluster
 # tags
 tags: infra,cluster,jenkins,build,runner
 # Kube minimum version
-kubeVersion: ">=1.26.0-0"
+kubeVersion: ">=1.27.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -58,5 +58,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
