--- a/charts/cluster-machine/Chart.yaml
+++ b/charts/cluster-machine/Chart.yaml
@@ -16,7 +16,7 @@ category: cluster
 # tags
 tags: infra,cluster,machine-api,machine,cluster-management
 # Kube minimum version
-kubeVersion: ">=1.26.0-0"
+kubeVersion: ">=1.27.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -43,5 +43,5 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
