--- a/charts/example-couchbase/Chart.yaml
+++ b/charts/example-couchbase/Chart.yaml
@@ -16,7 +16,7 @@ category: example
 # tags
 tags: infra,example,couchbase
 # Kube minimum version
-kubeVersion: ">=1.26.0-0"
+kubeVersion: ">=1.27.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -51,5 +51,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
