--- a/charts/example-fruitapp-shared/Chart.yaml
+++ b/charts/example-fruitapp-shared/Chart.yaml
@@ -18,7 +18,7 @@ category: example
 # tags
 tags: infra,example,fruitapp,shared,db
 # Kube minimum version
-kubeVersion: ">=1.26.0-0"
+kubeVersion: ">=1.27.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -46,5 +46,5 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
