--- a/charts/sxapi/Chart.yaml
+++ b/charts/sxapi/Chart.yaml
@@ -16,7 +16,7 @@ category: basic
 # tags
 tags: infra,basic,sxapi
 # Kube minimum version
-kubeVersion: ">=1.26.0-0"
+kubeVersion: ">=1.27.0-0"
 # Keyword list for this chart
 keywords: 
   - kubernetes
@@ -41,7 +41,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade all dependencies charts to version 13.26.2"
+      description: "upgrade minimum kubeVersion to 1.27.x minimum"
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: sxapi
