--- a/charts/example-fruitapp-project/Chart.yaml
+++ b/charts/example-fruitapp-project/Chart.yaml
@@ -44,27 +44,27 @@ maintainers:
 dependencies: 
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: project_devel
     condition: project_devel.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: project_integration
     condition: project_integration.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: project_preprod
     condition: project_preprod.activated
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: project_prod
     condition: project_prod.activated
   - name: example-imagestreams
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: imagestreams
     condition: imagestreams.activated
 
@@ -72,4 +72,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "upgrade minimum kubeVersion to 1.27.x minimum"
+    - kind: changed
+      description: "upgrade dependencies to version 14.6.5 for startx packages"
   artifacthub.io/containsSecurityUpdates: "false"
