--- a/charts/example-sxapi/Chart.yaml
+++ b/charts/example-sxapi/Chart.yaml
@@ -46,11 +46,13 @@ maintainers:
 dependencies:
   - name: sxapi
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: sxapi
 
 annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "upgrade minimum kubeVersion to 1.27.x minimum"
+    - kind: changed
+      description: "upgrade dependencies to version 14.6.5 for startx packages"
   artifacthub.io/containsSecurityUpdates: "false"
