--- a/charts/cluster-vault/Chart.yaml
+++ b/charts/cluster-vault/Chart.yaml
@@ -43,7 +43,7 @@ maintainers:
 dependencies:
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: project
     condition: project.enabled
   - name: vault
@@ -56,4 +56,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "upgrade minimum kubeVersion to 1.27.x minimum"
+    - kind: changed
+      description: "upgrade dependencies to version 14.6.5 for startx packages"
   artifacthub.io/containsSecurityUpdates: "false"
