--- a/charts/example-catalog/Chart.yaml
+++ b/charts/example-catalog/Chart.yaml
@@ -43,4 +43,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "upgrade minimum kubeVersion to 1.27.x minimum"
+    - kind: changed
+      description: "upgrade dependencies to version 14.6.5 for startx packages"
   artifacthub.io/containsSecurityUpdates: "false"
