--- a/charts/example-chaos/Chart.yaml
+++ b/charts/example-chaos/Chart.yaml
@@ -44,22 +44,22 @@ maintainers:
 dependencies:
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: project
     condition: project.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: cerberus_project
     condition: cerberus_project.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: kraken_project
     condition: kraken_project.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: mesh_project
     condition: mesh_project.enabled
   - name: chaos-mesh
@@ -69,7 +69,7 @@ dependencies:
     condition: mesh.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: monkey_project
     condition: monkey_project.enabled
   - name: kube-monkey
@@ -79,7 +79,7 @@ dependencies:
     condition: monkey.enabled
   - name: project
     repository: https://helm-repository.readthedocs.io/en/latest/packages/
-    version: "13.26.2"
+    version: "14.6.5"
     alias: litmus_project
     condition: litmus_project.enabled
   - name: litmus
@@ -92,4 +92,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: "upgrade minimum kubeVersion to 1.27.x minimum"
+    - kind: changed
+      description: "upgrade dependencies to version 14.6.5 for startx packages"
   artifacthub.io/containsSecurityUpdates: "false"
