Adding support for secret creation when using external ELK stack

--- a/charts/cluster-logging/Chart.yaml
+++ b/charts/cluster-logging/Chart.yaml
@@ -62,5 +62,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade ServiceMesh operator to version 5.8.0"
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: "Adding support for secret creation when using external ELK stack"
+  artifacthub.io/containsSecurityUpdates: "false"
